Add login and query Gateway endpoints, add zOSMF translation filter

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -75,6 +75,7 @@ mfaas:
         trustStorePassword: ${environment.truststorePassword}
     gateway:
         gatewayHostname: ${environment.gatewayHostname}
+        zosmfServiceName: ${environment.zosmfServiceName}
         timeoutInMillis: ${environment.gatewayTimeoutInMillis:30000}
         debugHeaders: false
         histrixTimeoutInMillis: ${environment.histrixTimeoutInMillis:240000}
