--- a/config/local/gateway-service.yml
+++ b/config/local/gateway-service.yml
@@ -22,6 +22,7 @@ environment:
 
 mfaas:
     gateway:
+        zosmfServiceName: zosmfca32
         verifySslCertificatesOfServices: false
 
 eureka:
