--- a/config/local/gateway-service.yml
+++ b/config/local/gateway-service.yml
@@ -4,9 +4,9 @@ apiml:
         hostname: localhost
         ipAddress: 127.0.0.1
         port: 10010
-        discoveryServiceUrls: https://localhost:10011/eureka/
+        discoveryServiceUrls: http://eureka:password@localhost:10011/eureka/
     security:
-        verifySslCertificatesOfServices: true
+        verifySslCertificatesOfServices: false
 
 spring:
     output:
