relaxed restrictions on actuator/prometheus endpoints and added prometheus dependency to enable profiling

--- a/api-catalog-services/build.gradle
+++ b/api-catalog-services/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     compile libraries.spring_boot_starter_thymeleaf
     compile libraries.apache_velocity
 
+    compile('io.micrometer:micrometer-registry-prometheus')
+
     testCompile libraries.rest_assured
     testCompile libraries.spring_mock_mvc
     testCompile libraries.lombok
