hard added diag spring profile to get the actuator endpoints without fiddling with launch scripts

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -40,6 +40,8 @@ apiml:
             jwtKeyAlias: jwtsecret
 
 spring:
+    profiles:
+        include: diag
     application:
         name: ${apiml.service.id}
     cloud:
