--- a/api-catalog-services/src/main/resources/application.yml
+++ b/api-catalog-services/src/main/resources/application.yml
@@ -7,6 +7,8 @@ apiml:
             jwtKeyAlias: jwtsecret
 
 spring:
+    profiles:
+        include: diag
     application:
         name: apicatalog
     cloud:
