--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -32,6 +32,8 @@ apiml:
         allPeersUrls: http://${apiml.discovery.userid}:${apiml.discovery.password}@${apiml.service.hostname}:${apiml.service.port}/eureka/
 
 spring:
+    profiles:
+        include: diag
     application:
         name: ${apiml.service.id}
     cloud:
